--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,11 +4,10 @@ global:
 
 scrape_configs:
     - job_name: sample-service
-      metrics_path: /prometheus
+      metrics_path: /metrics
 
-      dns_sd_configs:
-      - names:
-        - sample-service-service-discovery-service.sample-service.noname.local
+      static_configs:
+      - targets: ["sample-service-service-discovery-service.sample-service.noname.local"]
     
 
 
