Add prometheus alerter

--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -11,3 +11,8 @@ scrape_configs:
     
 
 
+alerting:
+    alertmanagers:
+        - static_configs:
+            - targets:
+                - alertmanager-service-discovery-service.alertmanager.noname.local
