--- a/services/prometheus/prometheus.yml
+++ b/services/prometheus/prometheus.yml
@@ -6,13 +6,14 @@ scrape_configs:
     - job_name: sample-service
       metrics_path: /metrics
 
-      static_configs:
-      - targets: ["sample-service-service-discovery-service.sample-service.noname.local"]
+      dns_sd_configs:
+        - names:
+            - "sample-service-service-discovery-service.sample-service.noname.local"
     
 
 
 alerting:
     alertmanagers:
-        - static_configs:
-            - targets:
+        - dns_sd_configs:
+            - names:
                 - alertmanager-service-discovery-service.alertmanager.noname.local
